--- a/concourse/tasks/gcloud-promote-package.yaml
+++ b/concourse/tasks/gcloud-promote-package.yaml
@@ -15,4 +15,4 @@ run:
   args:
   - -exc
   - |
-    gcloud pubsub topics publish $TOPIC --message '{"type": "promote", "request": {"universe": "((universe))", "repo": "((repo))", "environment": "((environment))"}}'
+    gcloud pubsub topics publish $TOPIC --message '{"type": "insertPackage", "request": {"universe": "((universe))", "repo": "((repo))", "environment": "((environment))"}}'
