--- a/concourse/pipelines/artifact-releaser-test.yaml
+++ b/concourse/pipelines/artifact-releaser-test.yaml
@@ -157,21 +157,23 @@ jobs:
           publish_version: ((.:version))
           source_version: "v20211027"
           release_notes: "Disregard this release. Alma Linux 8 test."
-      - task: publish-prod-test
-        config:
-          platform: linux
-          image_resource:
-            type: registry-image
-            source:
-              repository: google/cloud-sdk
-              tag: alpine
-          run:
-            path: /bin/sh
-            args:
-            - -exc
-            - |
-              wf=$(sed 's/\"/\\"/g' ./compute-image-tools/daisy_workflows/build-publish/test-workflow.json | tr -d '\n')
-              gcloud pubsub topics publish "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod" --message "{\"type\": \"insertImage\", \"request\": {\"image_name\": \"publish-prod-test\", \"gcs_image_path\": \"gs://artifact-releaser-autopush-rtp/publish-prod-test\", \"image_publish_template\": \"${wf}\", \"source_version\": \"v20220511\", \"publish_version\": \"((.:version))\", \"release_notes\": \"Prod test.\"}}"
+- name: release-testing-image-to-artifact-releaser-prod
+  plan:
+  - task: publish-prod-test
+    config:
+      platform: linux
+      image_resource:
+        type: registry-image
+        source:
+          repository: google/cloud-sdk
+          tag: alpine
+      run:
+        path: /bin/sh
+        args:
+        - -exc
+        - |
+          wf=$(sed 's/\"/\\"/g' ./compute-image-tools/daisy_workflows/build-publish/test-workflow.json | tr -d '\n')
+          gcloud pubsub topics publish "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod" --message "{\"type\": \"insertImage\", \"request\": {\"image_name\": \"publish-prod-test\", \"gcs_image_path\": \"gs://artifact-releaser-autopush-rtp/publish-prod-test\", \"image_publish_template\": \"${wf}\", \"source_version\": \"v20220511\", \"publish_version\": \"((.:version))\", \"release_notes\": \"Prod test.\"}}"
 - name: test-workload-identity
   plan:
   - task: show-workload-identity
